# app/Models/OrderIntent.php
@@ -8,5 +8,7 @@ use Illuminate\Database\Eloquent\Model;
 class OrderIntent extends Model
 {
     use HasFactory;
+    protected $table = 'orders_intents';
     protected $primaryKey = 'order_intent_id';
+    protected $fillable = ['order_intent_price','order_intent_type','user_email','','user_phone','expiration_date'];
 }
