# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API Billetterie Événementielle",
-        "description": "Cette API permet de gérer les événements et les tickets pour une billetterie événementielle.",
+        "description": "Cette API est une api de billetterie événementielle",
         "contact": {
             "email": "support@example.com"
         },
@@ -19,6 +19,101 @@
                 "responses": {
                     "200": {
                         "description": "Une liste d'événements"
+                    }
+                }
+            }
+        },
+        "/api/order-intents": {
+            "post": {
+                "tags": [
+                    "Order Intents"
+                ],
+                "summary": "Créer une intention de commande",
+                "operationId": "f47ff9d6271c4311d59d87b36def9b40",
+                "parameters": [
+                    {
+                        "name": "order_intent_price",
+                        "in": "query",
+                        "description": "Prix total de l'intention de commande",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "order_intent_type",
+                        "in": "query",
+                        "description": "Type de l'intention de commande",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "user_email",
+                        "in": "query",
+                        "description": "Email de l'utilisateur",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "user_phone",
+                        "in": "query",
+                        "description": "Téléphone de l'utilisateur",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "expiration_date",
+                        "in": "query",
+                        "description": "Date d'expiration de l'intention de commande",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "date-time"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Succès",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erreur de validation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -65,6 +160,10 @@
         {
             "name": "Events",
             "description": "Events"
+        },
+        {
+            "name": "Order Intents",
+            "description": "Order Intents"
         },
         {
             "name": "Ticket Types",
